@@ -1,6 +1,6 @@
 Package: stabledist
 Version: 0.6-1
-Date: 2011-03-18
+Date: 2011-03-21
 Title: Stable Distribution Functions
 Author: Diethelm Wuertz, Martin Maechler and Rmetrics core team members.
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
